refactor: change route paths
